testing fixed top for non collapsed

--- a/CSS/styling.css
+++ b/CSS/styling.css
@@ -155,6 +155,7 @@ p.project-description
     border:0;
     z-index:100;
     position: fixed;
+    top: 0;
   }
 }
 
